<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_order_viewsale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.order.SaleViewFragment">

    <LinearLayout
        android:layout_width="match_parent"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="Sale"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/order_viewsale_text_saleno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:textSize="24sp"
                    android:textStyle="bold" />

...
